src/global.scss
@import "./fragments/component/catalog/index.scss";
@import "./fragments/user/catalog/index.scss";
@import "./fragments/company/catalog/index.scss";
@import "./fragments/standard/catalog/index.scss";

.flex_warp {
  display: flex;
  flex-wrap: wrap;
}

.side-menu {
  // width: 14em;
  position: sticky;
  width: 3em;
  height: auto;
  font-size: 1em;
  line-height: 2em;
  color: #fff;
  font-weight: 700;
  text-transform: uppercase;
  /* position: absolute; */
  top: 20px;
  bottom: 0;
  left: -10em;
}
.side-menu ul {
  list-style: none;
  margin: 0;
  padding: 0;
  border-left: 2px solid #a7a7a7;
}

.side-menu ul li {
  flex: none;
  width: max-content;
  display: block;
  background-color: transparent;
  padding: 0.5em 0.8em;
  position: relative;
  transition: all ease 0.5s;
  border-radius: 0 8px 8px 0;
  cursor: pointer;
  border: 1px solid #eee;
  // box-shadow: 4px -1px 3px #ddd;
  // margin-bottom: 3px;
}

.side-menu ul li a span {
  transition: max-width ease 0.3s, opacity ease-out 0.4s,
    margin-right ease-in-out 0.2s;
}

.side-menu .active i {
  color: #1872f0;
}

/*the colors of the different columns*/
// .side-menu ul li:nth-child(1) {
//   background-color: rgba(0, 172, 237, 0.8);
// }
// .side-menu ul li:nth-child(2) {
//   background-color: rgba(59, 89, 152, 0.8);
// }
// .side-menu ul li:nth-child(3) {
//   background-color: rgba(0, 163, 0, 0.8);
// }
// .side-menu ul li:nth-child(4) {
//   background-color: rgba(30, 113, 69, 0.8);
// }
// .side-menu ul li:nth-child(5) {
//   background-color: rgba(255, 196, 13, 0.8);
// }
// .side-menu ul li:nth-child(6) {
//   background-color: rgba(203, 32, 39, 0.8);
// }

.side-menu ul li:hover {
  background-color: #fff;
  border-radius: 0 8px 8px 0;
}

.side-menu .active {
  // background-color: #339966!important;
  border-radius: 0 8px 8px 0 !important;
}

.side-menu ul li a span,
.side-menu ul li a div {
  max-width: 0;
  max-height: 2em;
  opacity: 0;
  overflow: hidden;
  margin-right: 0;
  display: inline-flex;
}

// .side-menu .extend a span {
//   opacity: 1 !important;
//   overflow: hidden !important;
//   text-overflow: ellipsis !important;
//   white-space: nowrap !important;
//   max-height: 20em !important;
//   max-width: 20em !important;
//   margin-right: 10px !important;
// }

.side-menu ul li:hover a span,
.side-menu ul li:hover a div:not([hidden="hidden"]) {
  opacity: 1;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  max-height: 20em;
  max-width: 20em;
  margin-right: 10px;
}

.side-menu ul li:hover a div span {
  margin-right: 0;
}

.side-menu ul li a {
  display: inline-flex;
  // color: #fff;
  color: #eee;
  text-decoration: none;
  align-items: center;
  justify-content: space-between;
  width: 100%;
}
.side-menu ul li span {
  color: #4a4a4a;
}
.iconBox {
  width: 1.2em;
  display: flex;
  justify-content: center;
  align-items: center;
}

.profileBox {
  display: flex;
  // justify-content: space-between;
  flex-wrap: wrap;
  // padding: 0 6%;
  .boxItem {
    margin-right: 10px;
  }
}

.set_none {
  display: none;
}

.show-img-box {
  width: auto!important;
  display: inline-flex;
  align-items: center;
  margin: 20px;
}

.showImg {
  $bigHW: 200px;
  $smallHW: 50px;

  display: flex;

  .modal-content{
    img{
      object-fit: contain;
    }
  }

  .mainImgBox {
    width: $bigHW;
    height: $bigHW;
    display: inline-flex;
    margin-left: 20px;
  }
  .mainImgBox img {
    /* width: 100%; */
    height: 100%;
    object-fit: contain;
    cursor: pointer;
  }
  .itemBox {
    height: $bigHW;
    overflow: auto;
  }
  .itemBox .item {
    width: $smallHW;
    height: $smallHW;
    border-radius: 2px;
    padding: 5px;
    border: 1px solid transparent;
    margin-bottom: 6px;
    cursor: pointer;
  }
  .itemBox .item.active {
    // border: 1px solid rgb(47, 144, 255);
    // background: #ddd;
    border: 2px solid #1872f0;
    border-radius: 8px;
  }
  .itemBox .item img {
    width: 100%;
    height: 100%;
    object-fit: contain;
    background: #eee;
  }
}

